# dia

./: .dockerignore  .gitignore  Dockerfile.cpu  Dockerfile.gpu  README.md  app.py  cli.py  cog.yaml  hello.py  predict.py  pyproject.toml
.github/workflows/: ci.yaml
dia/: audio.py  config.py  layers.py  model.py  state.py
docker/: Dockerfile.cpu  Dockerfile.gpu
example/: benchmark.py  simple-cpu.py  simple-mac.py  simple.py  simple_batch.py  voice_clone.py  voice_clone_batch.py
example/replicate/: README.md  predict.py
examples/minimal/: README.md  test_dia.py
